# ansible

./: .ansible-lint.yml  .cqfdrc  .gitignore  .gitmodules  .gitreview  .pre-commit-config.yaml  .yamllint  AGENTS.md  DISCONNECTED_DEPLOYMENT.adoc  OVS_configuration.adoc  README-ansible-galaxy.md  README-container.md  README.adoc  README.md  advanced_inventory_example.yaml  ansible-lint.conf  ansible-requirements.yaml  ansible.cfg  ceph_playbook.yaml  cluster_playbook.yaml  galaxy.yml  generate_module_documentation.sh  hackathon-brief-dynamic-cpu-pinning.md  inventory_example.yaml  kernel_params_playbook.yaml  libvirt_setup_playbook.yaml  molecule_requirements.txt  network_playbook.yaml  oraclelinux.ks  prepare.sh  rollback.md  setup_playbook.yaml  tox.ini  vm-manager-pinning-brief.md  yocto_standalone_ci.adoc
changelogs/: changelog.yaml
containers/: container_deployment_inventory.yml  deploy-seapath-docker-compose.yml
custom_playbooks/: README.adoc
examples/: README.adoc  add_disk_playbook_example.yaml  add_vm_playbook_example.yaml  (+5 more)
roles/deploy_seapath_alloc/files/seapath_alloc/: pyproject.toml
roles/deploy_seapath_alloc/files/seapath_alloc/seapath_alloc/: __init__.py  allocator.py  applier.py  cgroup.py  claim.py  cli.py  config.py  exporter.py  hook.py  logging_setup.py  pool.py  repacker.py  scheduler.py  status.py  threads.py  topology.py
roles/deploy_seapath_alloc/files/seapath_alloc/tests/: conftest.py  test_allocator.py  test_applier.py  test_config.py  test_pool.py  test_repacker.py  test_scheduler.py  test_status.py  test_threads.py  test_topology.py
(+1330 files in other folders)
